# reference-toolkit

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cyclamates full text screening NOT found.txt  Cyclamates full text screening URL.txt  DEEP_IMPROVEMENTS_SUMMARY.md  Dockerfile  GITHUB_READY.md  INSTALL_GUIDE.md  LICENSE  MANIFEST.in  ORGANIZATION_SUMMARY.md  PDF_RENAMING_GUIDE.md  QUICK_START.md  README.md  README_DOCKER.md  README_ORIGINAL_TOOLKIT.md  REFERENCE_VALIDATOR_SKILL_COMPLETE.md  RELEASE_STATUS.md  VERIFICATION_REPORT.md  WORKSPACE_CLEANUP.md  docker-compose.yml  docker-quickstart.sh  pyproject.toml  pytest.ini  reference-validator.skill  requirements.txt
.github/workflows/: ci.yml
docs/: DOCKER_USAGE.md  ENHANCED_ACCESS_FEATURES.md  FUTURE_ENHANCEMENTS.md
examples/: README.md  example-workflow.sh  example_workflow.py
scripts/: cleanup.sh
src/reference_toolkit/: __init__.py  __main__.py  author_contact.py  cli.py  config.py  crossref.py  doi_resolver.py  doi_validator.py  exporter.py  parser.py  pdf_downloader.py  pdf_quality.py  pdf_renamer.py  preprints.py  search.py  security.py  semantic_scholar.py  unpaywall.py
tests/: README.md  __init__.py  test_author_contact.py  test_cli.py  test_doi_resolver.py  test_doi_validator.py  test_exporter.py  test_pdf_renamer.py  test_proxy.py  test_search.py  test_security.py
tests/fixtures/: sample_refs.txt
tests/integration/: test_with_vpn.py
